frame I/O are now a menu items

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -8,17 +8,37 @@ Size=400,400
 Collapsed=0
 
 [Window][###22]
-Pos=23,45
-Size=466,834
+Pos=0,28
+Size=442,833
 Collapsed=0
 
 [Window][###24]
-Pos=883,445
+Pos=928,478
 Size=483,458
 Collapsed=0
 
 [Window][###23]
-Pos=508,38
-Size=726,751
+Pos=472,63
+Size=532,580
+Collapsed=0
+
+[Window][###216]
+Pos=479,291
+Size=205,113
+Collapsed=0
+
+[Window][###99]
+Pos=722,490
+Size=301,120
+Collapsed=0
+
+[Window][###98]
+Pos=722,490
+Size=301,120
+Collapsed=0
+
+[Window][###226]
+Pos=722,490
+Size=205,113
 Collapsed=0
 
