frame loading is now additive

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -18,7 +18,7 @@ Size=483,458
 Collapsed=0
 
 [Window][###23]
-Pos=472,63
+Pos=342,177
 Size=532,580
 Collapsed=0
 
@@ -38,6 +38,11 @@ Size=301,120
 Collapsed=0
 
 [Window][###226]
+Pos=722,490
+Size=205,113
+Collapsed=0
+
+[Window][###201]
 Pos=722,490
 Size=205,113
 Collapsed=0
