heatmap is dupeable

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -13,13 +13,13 @@ Size=442,833
 Collapsed=0
 
 [Window][###24]
-Pos=929,429
+Pos=7,904
 Size=483,458
-Collapsed=0
+Collapsed=1
 
 [Window][###23]
-Pos=476,45
-Size=611,669
+Pos=540,88
+Size=630,697
 Collapsed=0
 
 [Window][###216]
@@ -45,5 +45,50 @@ Collapsed=0
 [Window][###201]
 Pos=722,490
 Size=205,113
+Collapsed=0
+
+[Window][###254]
+Pos=60,60
+Size=216,191
+Collapsed=0
+
+[Window][###270]
+Pos=273,419
+Size=363,351
+Collapsed=0
+
+[Window][###252]
+Pos=123,227
+Size=755,634
+Collapsed=0
+
+[Window][###267]
+Pos=51,354
+Size=510,542
+Collapsed=0
+
+[Window][###282]
+Pos=966,82
+Size=435,390
+Collapsed=0
+
+[Window][###292]
+Pos=1011,415
+Size=398,398
+Collapsed=0
+
+[Window][###297]
+Pos=639,366
+Size=307,308
+Collapsed=0
+
+[Window][###312]
+Pos=60,60
+Size=100,100
+Collapsed=0
+
+[Window][###327]
+Pos=1072,119
+Size=300,300
 Collapsed=0
 
