heatmap dupe window shows frame #

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -13,12 +13,12 @@ Size=442,833
 Collapsed=0
 
 [Window][###24]
-Pos=7,904
+Pos=923,480
 Size=483,458
-Collapsed=1
+Collapsed=0
 
 [Window][###23]
-Pos=540,88
+Pos=462,56
 Size=630,697
 Collapsed=0
 
@@ -89,6 +89,56 @@ Collapsed=0
 
 [Window][###327]
 Pos=1072,119
+Size=300,300
+Collapsed=0
+
+[Window][###114]
+Pos=722,490
+Size=301,120
+Collapsed=0
+
+[Window][###357]
+Pos=809,260
+Size=300,300
+Collapsed=0
+
+[Window][###362]
+Pos=716,553
+Size=300,300
+Collapsed=0
+
+[Window][###367]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
+[Window][###372]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
+[Window][###377]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
+[Window][###382]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
+[Window][###387]
+Pos=870,168
+Size=300,300
+Collapsed=0
+
+[Window][###393]
+Pos=884,487
+Size=300,300
+Collapsed=0
+
+[Window][###401]
+Pos=1015,621
 Size=300,300
 Collapsed=0
 
