use cid rather than number for cid indicator button

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -14,7 +14,7 @@ Size=348,396
 Collapsed=0
 
 [Window][###23]
-Pos=466,47
+Pos=555,50
 Size=610,666
 Collapsed=0
 
@@ -61,5 +61,15 @@ Collapsed=0
 [Window][###236]
 Pos=505,437
 Size=430,430
+Collapsed=0
+
+[Window][###232]
+Pos=722,490
+Size=205,113
+Collapsed=0
+
+[Window][###277]
+Pos=583,530
+Size=300,300
 Collapsed=0
 
