完善用于 windows 显示的 viewport 菜单

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -4,17 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][###22]
-Pos=34,44
+Pos=31,57
 Size=444,846
 Collapsed=0
 
 [Window][###24]
-Pos=1056,545
+Pos=549,46
 Size=348,396
 Collapsed=0
 
 [Window][###23]
-Pos=555,50
+Pos=643,40
 Size=610,666
 Collapsed=0
 
@@ -71,5 +71,20 @@ Collapsed=0
 [Window][###277]
 Pos=583,530
 Size=300,300
+Collapsed=0
+
+[Window][###268]
+Pos=527,414
+Size=300,300
+Collapsed=0
+
+[Window][###293]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
+[Window][###318]
+Pos=467,143
+Size=455,482
 Collapsed=0
 
