--- a/dpginit.ini
+++ b/dpginit.ini
@@ -88,3 +88,43 @@ Pos=467,143
 Size=455,482
 Collapsed=0
 
+[Window][###518]
+Pos=744,432
+Size=300,300
+Collapsed=0
+
+[Window][###543]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
+[Window][###568]
+Pos=272,202
+Size=300,300
+Collapsed=0
+
+[Window][###593]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
+[Window][###618]
+Pos=101,226
+Size=300,300
+Collapsed=0
+
+[Window][###643]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
+[Window][###668]
+Pos=0,19
+Size=303,316
+Collapsed=0
+
+[Window][###693]
+Pos=0,19
+Size=300,300
+Collapsed=0
+
