add init truncation to forget positions of temp windows

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -4,17 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][###22]
-Pos=3,27
-Size=444,846
+Pos=12,30
+Size=443,854
 Collapsed=0
 
-[Window][###24]
-Pos=1067,28
-Size=348,396
+[Window][###25]
+Pos=274,519
+Size=423,428
 Collapsed=0
 
 [Window][###23]
-Pos=449,29
-Size=610,666
+Pos=462,35
+Size=539,566
+Collapsed=0
+
+[Window][###24]
+Pos=1101,361
+Size=312,291
 Collapsed=0
 
