--- a/dpginit.ini
+++ b/dpginit.ini
@@ -14,12 +14,67 @@ Size=430,430
 Collapsed=0
 
 [Window][###23]
-Pos=562,134
-Size=709,680
+Pos=480,25
+Size=1219,1131
 Collapsed=0
 
 [Window][###24]
-Pos=931,38
-Size=481,545
+Pos=1345,403
+Size=750,682
+Collapsed=0
+
+[Window][###259]
+Pos=1280,684
+Size=205,113
+Collapsed=0
+
+[Window][###7976]
+Pos=1008,290
+Size=1036,960
+Collapsed=0
+
+[Window][###8735]
+Pos=1158,345
+Size=999,948
+Collapsed=0
+
+[Window][###9158]
+Pos=1187,673
+Size=760,708
+Collapsed=0
+
+[Window][###11739]
+Pos=1190,563
+Size=864,783
+Collapsed=0
+
+[Window][###11728]
+Pos=361,556
+Size=790,778
+Collapsed=0
+
+[Window][###41514]
+Pos=404,691
+Size=720,634
+Collapsed=0
+
+[Window][###41525]
+Pos=1129,695
+Size=652,677
+Collapsed=0
+
+[Window][###42063]
+Pos=1367,362
+Size=886,716
+Collapsed=0
+
+[Window][###58919]
+Pos=1425,104
+Size=769,725
+Collapsed=0
+
+[Window][###65652]
+Pos=1609,549
+Size=783,688
 Collapsed=0
 
