--- a/dpginit.ini
+++ b/dpginit.ini
@@ -4,22 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][###22]
-Pos=-6,36
-Size=438,874
+Pos=121,69
+Size=438,863
 Collapsed=0
 
 [Window][###25]
-Pos=200,200
-Size=430,430
+Pos=85,77
+Size=1723,615
 Collapsed=0
 
 [Window][###23]
-Pos=374,83
+Pos=602,63
 Size=847,746
 Collapsed=0
 
 [Window][###24]
-Pos=1301,118
+Pos=1119,207
 Size=481,545
+Collapsed=0
+
+[Window][###26]
+Pos=60,60
+Size=100,100
 Collapsed=0
 
