added: drag rect snapping

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -9,13 +9,13 @@ Size=420,741
 Collapsed=0
 
 [Window][###25]
-Pos=655,811
-Size=1723,615
-Collapsed=1
+Pos=346,164
+Size=1465,761
+Collapsed=0
 
 [Window][###23]
-Pos=502,34
-Size=847,746
+Pos=792,417
+Size=1093,936
 Collapsed=0
 
 [Window][###24]
@@ -26,5 +26,15 @@ Collapsed=0
 [Window][###26]
 Pos=60,60
 Size=100,100
+Collapsed=0
+
+[Window][###1510]
+Pos=976,490
+Size=328,158
+Collapsed=0
+
+[Window][###1638]
+Pos=0,19
+Size=283,291
 Collapsed=0
 
