--- a/dpginit.ini
+++ b/dpginit.ini
@@ -4,18 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][###22]
-Pos=40,20
-Size=420,741
+Pos=80,51
+Size=443,960
 Collapsed=0
 
 [Window][###25]
-Pos=346,164
-Size=1465,761
+Pos=-85,214
+Size=1587,775
 Collapsed=0
 
 [Window][###23]
-Pos=792,417
-Size=1093,936
+Pos=233,74
+Size=1093,935
 Collapsed=0
 
 [Window][###24]
@@ -34,6 +34,106 @@ Size=328,158
 Collapsed=0
 
 [Window][###1638]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###331]
+Pos=722,490
+Size=219,113
+Collapsed=0
+
+[Window][###3927]
+Pos=940,490
+Size=328,158
+Collapsed=0
+
+[Window][###4094]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###131]
+Pos=940,490
+Size=178,196
+Collapsed=0
+
+[Window][###1645]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1666]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1679]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1700]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1730]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1751]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1972]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1993]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1871]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1892]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1997]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###2018]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1771]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1792]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###2100]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###2121]
 Pos=0,19
 Size=283,291
 Collapsed=0
