--- a/dpginit.ini
+++ b/dpginit.ini
@@ -9,13 +9,13 @@ Size=443,960
 Collapsed=0
 
 [Window][###25]
-Pos=539,36
-Size=867,775
-Collapsed=1
+Pos=924,145
+Size=853,881
+Collapsed=0
 
 [Window][###23]
-Pos=306,39
-Size=1093,935
+Pos=13,40
+Size=1093,867
 Collapsed=0
 
 [Window][###24]
@@ -134,6 +134,36 @@ Size=328,158
 Collapsed=0
 
 [Window][###2121]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1740]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1761]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1651]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1672]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1647]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1668]
 Pos=0,19
 Size=283,291
 Collapsed=0
