--- a/dpginit.ini
+++ b/dpginit.ini
@@ -19,7 +19,17 @@ Size=1219,1131
 Collapsed=0
 
 [Window][###24]
-Pos=1757,512
+Pos=1702,336
 Size=750,682
+Collapsed=0
+
+[Window][###259]
+Pos=1280,684
+Size=205,113
+Collapsed=0
+
+[Window][###7011]
+Pos=1025,504
+Size=853,839
 Collapsed=0
 
