--- a/dpginit.ini
+++ b/dpginit.ini
@@ -9,17 +9,17 @@ Size=443,960
 Collapsed=0
 
 [Window][###25]
-Pos=924,145
-Size=853,881
+Pos=137,231
+Size=1291,881
 Collapsed=0
 
 [Window][###23]
-Pos=13,40
-Size=1093,867
+Pos=441,48
+Size=840,824
 Collapsed=0
 
 [Window][###24]
-Pos=1119,207
+Pos=469,180
 Size=481,545
 Collapsed=0
 
@@ -164,6 +164,116 @@ Size=328,158
 Collapsed=0
 
 [Window][###1668]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###327]
+Pos=722,490
+Size=219,113
+Collapsed=0
+
+[Window][###1698]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1719]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1749]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1770]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1819]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1840]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1859]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1890]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1911]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1925]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1946]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1960]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###1981]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###1995]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###2016]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###2030]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###2060]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###2135]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###2156]
+Pos=0,19
+Size=283,291
+Collapsed=0
+
+[Window][###2188]
+Pos=722,490
+Size=328,158
+Collapsed=0
+
+[Window][###2209]
 Pos=0,19
 Size=283,291
 Collapsed=0
