previous commit was strange, this commit is normal!

--- a/dpginit.ini
+++ b/dpginit.ini
@@ -14,12 +14,12 @@ Size=1291,881
 Collapsed=1
 
 [Window][###23]
-Pos=511,50
+Pos=352,61
 Size=840,824
 Collapsed=0
 
 [Window][###24]
-Pos=435,179
+Pos=1227,282
 Size=592,614
 Collapsed=0
 
@@ -276,5 +276,10 @@ Collapsed=0
 [Window][###2209]
 Pos=0,19
 Size=283,291
+Collapsed=0
+
+[Window][###328]
+Pos=722,490
+Size=219,113
 Collapsed=0
 
